WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
311731
Retry whenever we see "Busy" starting an NFC session
https://bugs.webkit.org/show_bug.cgi?id=311731
Summary
Retry whenever we see "Busy" starting an NFC session
pascoe@apple.com
Reported
2026-04-08 08:23:25 PDT
We have seen evidence of things like the NDEF tags on certain security keys preventing an NFC session from starting. More generally we don't properly handle the case where the hardware was busy when we attempted to start an NFC session. We should detect this and attempt to restart the session as we do with polling once a session is started.
Attachments
Add attachment
proposed patch, testcase, etc.
pascoe@apple.com
Comment 1
2026-04-08 08:23:40 PDT
rdar://171940190
pascoe@apple.com
Comment 2
2026-04-08 10:33:16 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/62280
EWS
Comment 3
2026-04-20 13:13:48 PDT
Committed
311613@main
(349a4f20ed1c): <
https://commits.webkit.org/311613@main
> Reviewed commits have been landed. Closing PR #62280 and removing active labels.
EWS
Comment 4
2026-05-01 10:40:10 PDT
Committed
305413.797@safari-7624-branch
(1c89187fbba2): <
https://commits.webkit.org/305413.797@safari-7624-branch
> Reviewed commits have been landed. Closing PR #5014 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug