Cherry-pick 349a4f20ed1c. rdar://175202321

Retry whenever we see "Busy" starting an NFC session
    rdar://171940190
    https://bugs.webkit.org/show_bug.cgi?id=311731

    Reviewed by Brent Fulgham.

    In some cases, things like (but not limited to) NDEF tags on a security key can
    cause an error that prevents us from opening a NFC session for CTAP purposes.

    Currently, we don't recover from this error and the NFC transport silently doesn't
    work for the ceremony. We do have a restart polling timer, but it never restarts
    the entire session if it failed. To fix this, we schedule a retry whenever we
    encounter an error starting a NFC session.

    Tests: Tools/TestWebKitAPI/Resources/cocoa/web-authentication-get-assertion-nfc-busy.html
           Tools/TestWebKitAPI/Tests/WebKit/WKWebView/_WKWebAuthenticationPanel.mm

    * Source/WebCore/testing/MockWebAuthenticationConfiguration.h:
    * Source/WebCore/testing/MockWebAuthenticationConfiguration.idl:
    * Source/WebKit/Configurations/AllowedSPI.toml:
    * Source/WebKit/Platform/spi/Cocoa/NearFieldSPI.h:
    * Source/WebKit/Shared/WebCoreArgumentCoders.serialization.in:
    * Source/WebKit/UIProcess/WebAuthentication/Cocoa/NfcConnection.h:
    * Source/WebKit/UIProcess/WebAuthentication/Cocoa/NfcConnection.mm:
    (WebKit::NfcConnection::stopWithCompletionHandler):
    * Source/WebKit/UIProcess/WebAuthentication/Cocoa/NfcService.h:
    * Source/WebKit/UIProcess/WebAuthentication/Cocoa/NfcService.mm:
    (WebKit::NfcService::restartDiscoveryInternal):
    (WebKit::NfcService::platformStartDiscovery):
    * Source/WebKit/UIProcess/WebAuthentication/Mock/MockNfcService.mm:
    (WebKit::MockNfcService::platformStartDiscovery):
    * Tools/TestWebKitAPI/Resources/cocoa/web-authentication-get-assertion-nfc-busy.html: Added.
    * Tools/TestWebKitAPI/Tests/WebKit/WKWebView/_WKWebAuthenticationPanel.mm:
    (TestWebKitAPI::TEST(WebAuthenticationPanel, NfcHardwareBusyRetry)):

    Canonical link: https://commits.webkit.org/311613@main

Identifier: 305413.936@safari-7624.4-branch